--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "return all the valid stations",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "Mukherjee Ritwik mritwik369@gmail.com",
   "license": "MIT",
